--- a/src/app/view/home/home.component.css
+++ b/src/app/view/home/home.component.css
@@ -4,6 +4,7 @@
 
 .example-header-image {
   background-size: cover;
+  margin-bottom: 5px;
 }
 .mat-paginator-sticky {
   background-color: #f0f0f0;
